--- a/index.htm
+++ b/index.htm
@@ -2,14 +2,14 @@
 <html><head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title>Split-Flap Display Control</title>
-  <link type="text/css" rel="stylesheet" href="css/splitflap.css" />
+  <link type="text/css" rel="stylesheet" href="css/splitflap.css" /> 
   <style>
-      
-      
+  /*@import url(http://fonts.googleapis.com/css?family=Limelight);*/
+  @import url(http://fonts.googleapis.com/css?family=Poiret+One);
   </style>
 </head>
 <body>
-<h1>Paper Cup Counter</h1>
+<h1>Cup Counter</h1>
 <p>Total since 06 Aug 2015</p>
 <div id="main">
   <div id="total" class="segment total"></div>
@@ -36,7 +36,9 @@
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script type="text/javascript" src="http://code.jquery.com/ui/1.10.2/jquery-ui.js"></script>
   <script src="https://cdn.firebase.com/js/client/2.2.9/firebase.js"></script>
+  <script type="text/javascript" src="js/moment.min.js"></script>
   <script type="text/javascript" src="js/splitflap.js"></script>
+  <script type="text/javascript" src="js/initCupDb.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 
 
