--- a/index.htm
+++ b/index.htm
@@ -1,9 +1,12 @@
 <!doctype html>
 <html><head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  <title>Split-Flap Display Control</title>
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <title>AKQA Cup Counter</title>
   <link type="text/css" rel="stylesheet" href="css/splitflap.css" /> 
   <style>
+  /* Main Font */
   /*@import url(http://fonts.googleapis.com/css?family=Limelight);*/
   @import url(http://fonts.googleapis.com/css?family=Poiret+One);
   </style>
