--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <!doctype html>
 <html><head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   <title>AKQA Cup Counter</title>
