--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,6 @@
 <!doctype html>
-<html><head>
+<html>
+<head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -33,7 +34,89 @@
 </div>
 
 <div id="logo"></div>
-<footer>Visit www.akqacupcounter.com</footer>
+<div class="url-footer">Visit www.craftedbynga.com/cupcounter/</div>
+
+<div id="graph-container" class="graph-container">
+  <!-- Current Date -->
+  <div class="current-date-time">
+    <div id="date" class="date"></div> <div id="clock" class="clock"></div>
+  </div>
+
+  <!-- Graph -->
+  <div id="graph" class="graph">
+    <!-- Height Notches -->
+    <div class="notches">
+      <div class="notch"></div>
+      <div class="notch"></div>
+      <div class="notch"></div>
+      <div class="notch"></div>
+    </div>
+  
+    <!-- Y Legend -->
+    <div class="ylegend">
+      <div class="number">80</div>
+      <div class="number">60</div>
+      <div class="number">40</div>
+      <div class="number">20</div>
+      <div class="number">0</div>
+    </div>
+    <!-- X Legend -->
+    <div class="xlegend">
+      <div class="hour">12am</div>
+      <div class="hour">1am</div>
+      <div class="hour">2am</div>
+      <div class="hour">3am</div>
+      <div class="hour">4am</div>
+      <div class="hour">5am</div>
+      <div class="hour">6am</div>
+      <div class="hour">7am</div>
+      <div class="hour">8am</div>
+      <div class="hour">9am</div>
+      <div class="hour">10am</div>
+      <div class="hour">11am</div>
+      <div class="hour">12pm</div>
+      <div class="hour">1pm</div>
+      <div class="hour">2pm</div>
+      <div class="hour">3pm</div>
+      <div class="hour">4pm</div>
+      <div class="hour">5pm</div>
+      <div class="hour">6pm</div>
+      <div class="hour">7pm</div>
+      <div class="hour">8pm</div>
+      <div class="hour">9pm</div>
+      <div class="hour">10pm</div>
+      <div class="hour">11pm</div>
+    </div>
+    
+    <!-- Bars -->
+    <div class="bars">
+      <div class="hour" id="hour0"><div class="value">0</div></div>
+      <div class="hour" id="hour1"><div class="value">0</div></div>
+      <div class="hour" id="hour2"><div class="value">0</div></div>
+      <div class="hour" id="hour3"><div class="value">0</div></div>
+      <div class="hour" id="hour4"><div class="value">0</div></div>
+      <div class="hour" id="hour5"><div class="value">0</div></div>
+      <div class="hour" id="hour6"><div class="value">0</div></div>
+      <div class="hour" id="hour7"><div class="value">0</div></div>
+      <div class="hour" id="hour8"><div class="value">0</div></div>
+      <div class="hour" id="hour9"><div class="value">0</div></div>
+      <div class="hour" id="hour10"><div class="value">0</div></div>
+      <div class="hour" id="hour11"><div class="value">0</div></div>
+      <div class="hour" id="hour12"><div class="value">0</div></div>
+      <div class="hour" id="hour13"><div class="value">0</div></div>
+      <div class="hour" id="hour14"><div class="value">0</div></div>
+      <div class="hour" id="hour15"><div class="value">0</div></div>
+      <div class="hour" id="hour16"><div class="value">0</div></div>
+      <div class="hour" id="hour17"><div class="value">0</div></div>
+      <div class="hour" id="hour18"><div class="value">0</div></div>
+      <div class="hour" id="hour19"><div class="value">0</div></div>
+      <div class="hour" id="hour20"><div class="value">0</div></div>
+      <div class="hour" id="hour21"><div class="value">0</div></div>
+      <div class="hour" id="hour22"><div class="value">0</div></div>
+      <div class="hour" id="hour23"><div class="value">0</div></div>
+    </div>
+  </div>
+</div>
 </body>
 
   
