added monthly view

--- a/index.htm
+++ b/index.htm
@@ -116,6 +116,202 @@
       <div class="hour" id="hour23"><div class="value">0</div></div>
     </div>
   </div>
+  <!-- End Hourly Graph -->
+</div>
+
+<div id="m_graph-container" class="graph-container">
+  <!-- Current Date -->
+  <div class="current-date-time">
+    <div class="month" id="current-month"></div>
+  </div>
+  <!-- Monthly Graph -->
+  <div id="monthly_graph" class="m_graph">
+    <!-- Height Notches -->
+    <div class="notches">
+      <div class="notch"></div>
+      <div class="notch"></div>
+      <div class="notch"></div>
+      <div class="notch"></div>
+      <div class="notch"></div>
+    </div>
+  
+    <!-- Y Legend -->
+    <div class="ylegend">
+      <div class="number">500</div>
+      <div class="number">400</div>
+      <div class="number">300</div>
+      <div class="number">200</div>
+      <div class="number">100</div>
+      <div class="number">0</div>
+    </div>
+
+    
+    <!-- X Legend -->
+    <div class="xlegend">
+      <div class="day">1</div>
+      <div class="day">2</div>
+      <div class="day">3</div>
+      <div class="day">4</div>
+      <div class="day">5</div>
+      <div class="day">6</div>
+      <div class="day">7</div>
+      <div class="day">8</div>
+      <div class="day">9</div>
+      <div class="day">10</div>
+      <div class="day">11</div>
+      <div class="day">12</div>
+      <div class="day">13</div>
+      <div class="day">14</div>
+      <div class="day">15</div>
+      <div class="day">16</div>
+      <div class="day">17</div>
+      <div class="day">18</div>
+      <div class="day">19</div>
+      <div class="day">20</div>
+      <div class="day">21</div>
+      <div class="day">22</div>
+      <div class="day">23</div>
+      <div class="day">24</div>
+      <div class="day">25</div>
+      <div class="day">26</div>
+      <div class="day">27</div>
+      <div class="day">28</div>
+      <div class="day">29</div>
+      <div class="day">30</div>
+      <div class="day">31</div>
+    </div>
+
+
+    <!-- Bars -->
+    <div class="bars" id="month_bars">
+      <div class="day" id="day01">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day02">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day03">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day04">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day05">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day06">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day07">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day08">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day09">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day10">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day11">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day12">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day13">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day14">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day15">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day16">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day17">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day18">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day19">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day20">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day21">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day22">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day23">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day24">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day25">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day26">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day27">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day28">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day29">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day30">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="day" id="day31">
+        <div class="bar"></div>
+        <div class="value"></div>
+      </div>
+      <div class="clear"></div>
+    </div>
+  </div>
+  <!-- End Monthly Graph -->
 </div>
 </body>
 
