Month Graph + nav

--- a/index.htm
+++ b/index.htm
@@ -121,8 +121,10 @@
 
 <div id="m_graph-container" class="graph-container">
   <!-- Current Date -->
-  <div class="current-date-time">
+  <div class="current-month-info">
+    <div class="prev-month" id="prev-month"><div class="button">&lt;</div></div>
     <div class="month" id="current-month"></div>
+    <div class="next-month" id="next-month"><div class="button">&gt;</div></div>
   </div>
   <!-- Monthly Graph -->
   <div id="monthly_graph" class="m_graph">
